# fusep

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  TESTPLAN.md  backend.sh  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  start-daemon-sudo.sh  start-daemon.sh  start-real.sh  start.sh
fuse-proto-viz/daemon/: CMakeLists.txt
fuse-proto-viz/daemon/include/: bpf_loader.h  enricher.h  fuse_types.h  security_engine.h  spsc_queue.h  storage.h  ws_broadcaster.h
fuse-proto-viz/daemon/src/: bpf_loader.cpp  enricher.cpp  main.cpp  security_engine.cpp  storage.cpp  ws_broadcaster.cpp
fuse-proto-viz/deploy/: Dockerfile  docker-compose.yml  entrypoint.sh  fuseviz.conf
fuse-proto-viz/deploy/benchmark/: fio_test.sh
fuse-proto-viz/docs/: ARCHITECTURE.md  PROTOCOL.md
fuse-proto-viz/ebpf/: Makefile  fuse_trace.bpf.c  fuse_trace.h
src/__tests__/: ws-schemas.test.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/fuseviz/: event-log-panel.tsx  metrics-charts.tsx  right-panel.tsx  sequence-diagram.tsx  top-bar.tsx
src/lib/: fuse-context.tsx  fuse-types.ts  ws-schemas.ts
